packages/axelar-wasm-std-derive/tests/ui/event_attributes_unit_struct.rs
use axelar_wasm_std_derive::EventAttributes;

#[derive(EventAttributes)]
struct UnitStruct;

fn main() {}
